# simple-port-scanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  port_scanner.py  pyproject.toml  requirements-dev.txt  results.csv  results.json
.github/workflows/: ci.yml
tests/: test_core.py
